dfir_rs/tests/compile-fail-stable/surface_fold_keyed_generics_bad.stderr
error[E0271]: type mismatch resolving `<Iter<Drain<'_, &str>> as Stream>::Item == (&str, _)`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:3:9
  |
3 |         source_iter(["hello", "world"])
  |         ^^^^^^^^^^^ expected `(&str, _)`, found `&str`
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ---------- required by a bound introduced by this call
  |
  = note:  expected tuple `(&str, _)`
          found reference `&str`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0271]: expected `new` to return `usize`, but it returns `String`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ expected `usize`, found `String`
  |
  = note: required for `dfir_rs::util::accumulator::Fold<fn() -> std::string::String {std::string::String::new}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:62: 4:80}>` to implement `Accumulator<usize, _>`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0631]: type mismatch in closure arguments
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ expected due to this               ------------------ found signature defined here
  |
  = note: expected closure signature `for<'a> fn(&'a mut usize, _) -> _`
             found closure signature `fn(&mut std::string::String, &str) -> _`
  = note: required for `dfir_rs::util::accumulator::Fold<fn() -> std::string::String {std::string::String::new}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:62: 4:80}>` to implement `Accumulator<usize, _>`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`
help: consider adjusting the signature so it does not borrow its argument
  |
4 -             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
4 +             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, _| {
  |

error[E0271]: type mismatch resolving `<Iter<Drain<'_, &str>> as Stream>::Item == (&str, _)`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ expected `(&str, _)`, found `&str`
  |
  = note:  expected tuple `(&str, _)`
          found reference `&str`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0271]: type mismatch resolving `<Iter<Drain<'_, &str>> as Stream>::Item == (&str, _)`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:7:16
  |
7 |             -> for_each(|(k, v)| println!("({:?}, {:?})", k, v));
  |                ^^^^^^^^ expected `(&str, _)`, found `&str`
  |
  = note:  expected tuple `(&str, _)`
          found reference `&str`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0271]: expected `new` to return `usize`, but it returns `String`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:7:16
  |
7 |             -> for_each(|(k, v)| println!("({:?}, {:?})", k, v));
  |                ^^^^^^^^ expected `usize`, found `String`
  |
  = note: required for `dfir_rs::util::accumulator::Fold<fn() -> std::string::String {std::string::String::new}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:62: 4:80}>` to implement `Accumulator<usize, _>`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0631]: type mismatch in closure arguments
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:7:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                                                              ------------------ found signature defined here
...
7 |             -> for_each(|(k, v)| println!("({:?}, {:?})", k, v));
  |                ^^^^^^^^ expected due to this
  |
  = note: expected closure signature `for<'a> fn(&'a mut usize, _) -> _`
             found closure signature `fn(&mut std::string::String, &str) -> _`
  = note: required for `dfir_rs::util::accumulator::Fold<fn() -> std::string::String {std::string::String::new}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:62: 4:80}>` to implement `Accumulator<usize, _>`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`
help: consider adjusting the signature so it does not borrow its argument
  |
4 -             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
4 +             -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, _| {
  |
